# perlin-noise

./: CMakeLists.txt  Makefile  build.sh
src/: main.cc  perlin.cc
src/include/: perlin.hpp  tiles.hpp
